[metadata]
name = IPAMpy
version = 0.1.2
author = Christopher M. Stephan
author_email = xer0_kelvin@yahoo.com
description = An IP Address Management Package to support arithmetic function on ip Prefixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xk2600/ipampy
project_urls =
    Bug Tracker = https://github.com/xk2600/ipampy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

